# ChangeLog for dev-libs/gmime
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/gmime/ChangeLog,v 1.86 2009/01/26 23:06:53 loki_val Exp $

  26 Jan 2009; Peter Alfredsen <loki_val@gentoo.org> gmime-2.2.23.ebuild:
  Fix bug 256470. To run eautoreconf, we need gtk-doc-am.

  26 Jan 2009; Peter Alfredsen <loki_val@gentoo.org>
  +files/gmime-2.2.23-sign-assembly.patch, +files/gmime-sharp.snk,
  gmime-2.2.23.ebuild:
  Non-maintainer-commit: Fix bug 248657. Import signing key from upstream,
  fix assemblyinfo.cs and Makefile.am to actually sign the assembly.

  24 Dec 2008; Gilles Dartiguelongue <eva@gentoo.org> -gmime-2.2.3.ebuild,
  -gmime-2.2.11.ebuild, -gmime-2.2.17.ebuild, -gmime-2.2.22.ebuild,
  -gmime-2.4.1.ebuild, -gmime-2.4.2.ebuild:
  clean up old revisions.

  01 Dec 2008; Jeroen Roovers <jer@gentoo.org> gmime-2.2.23.ebuild:
  Stable for HPPA (bug #247633).

  25 Nov 2008; Raúl Porcel <armin76@gentoo.org> gmime-2.2.23.ebuild:
  alpha/ia64/sparc stable wrt #247633

  22 Nov 2008; Markus Meier <maekke@gentoo.org> gmime-2.2.23.ebuild:
  amd64/x86 stable, bug #247633

  20 Nov 2008; Brent Baude <ranger@gentoo.org> gmime-2.2.23.ebuild:
  stable ppc64, bug 247633

  20 Nov 2008; Tobias Scherbaum <dertobi123@gentoo.org> gmime-2.2.23.ebuild:
  ppc stable, bug #247633

*gmime-2.4.3 (19 Nov 2008)

  19 Nov 2008; Gilles Dartiguelongue <eva@gentoo.org> +gmime-2.4.3.ebuild:
  Bump to 2.4.3. Bug fixes.

  18 Oct 2008; Brent Baude <ranger@gentoo.org> gmime-2.2.17.ebuild:
  Marking gmime-2.2.17 ppc stable for bug 236971

*gmime-2.4.2 (11 Oct 2008)

  11 Oct 2008; Gilles Dartiguelongue <eva@gentoo.org> +gmime-2.4.2.ebuild:
  Bump to 2.4.2. Finally fix parallel installation issues.

  04 Oct 2008; Jeroen Roovers <jer@gentoo.org> gmime-2.2.17.ebuild:
  Stable for HPPA (bug 229709).

*gmime-2.4.1 (02 Oct 2008)

  02 Oct 2008; Gilles Dartiguelongue <eva@gentoo.org> +gmime-2.4.1.ebuild:
  Version bump to 2.4.1.
