@@ -1,6 +1,6 @@
-# Copyright 1999-2008 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/gmime/Attic/gmime-2.4.3.ebuild,v 1.1 2008/11/19 22:31:43 eva Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/gmime/Attic/gmime-2.4.3.ebuild,v 1.2 2009/03/27 15:59:23 ranger Exp $
 
 inherit gnome2 eutils mono libtool
 
@@ -9,7 +9,7 @@ HOMEPAGE="http://spruce.sourceforge.net/gmime/"
 
 SLOT="2.4"
 LICENSE="LGPL-2.1"
-KEYWORDS="~alpha ~amd64 ~hppa ~ia64 ~ppc ~ppc64 ~sparc ~x86 ~x86-fbsd"
+KEYWORDS="~alpha ~amd64 ~hppa ~ia64 ppc ~ppc64 ~sparc ~x86 ~x86-fbsd"
 IUSE="doc mono"
 
 RDEPEND=">=dev-libs/glib-2.12
