@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/gmime
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/gmime/ChangeLog,v 1.86 2009/01/26 23:06:53 loki_val Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/gmime/ChangeLog,v 1.87 2009/03/27 15:59:23 ranger Exp $
+
+  27 Mar 2009; Brent Baude <ranger@gentoo.org> gmime-2.4.3.ebuild:
+  Marking gmime-2.4.3 ppc stable for bug 234305
 
   26 Jan 2009; Peter Alfredsen <loki_val@gentoo.org> gmime-2.2.23.ebuild:
   Fix bug 256470. To run eautoreconf, we need gtk-doc-am.
